--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "discord.js-commando": "^0.12.2",
     "ffmpeg-static": "^4.2.7",
     "fs": "0.0.1-security",
+    "git": "^0.1.5",
     "install": "^0.13.0",
     "ms": "^2.1.3",
     "node.js": "0.0.1-security",
