--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fs": "0.0.1-security",
     "git": "^0.1.5",
     "install": "^0.13.0",
+    "mime": "^2.5.0",
     "ms": "^2.1.3",
     "node.js": "0.0.1-security",
     "opusscript": "0.0.7",
