--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "git": "^0.1.5",
     "install": "^0.13.0",
     "mime": "^2.5.0",
+    "moment": "^2.29.1",
     "ms": "^2.1.3",
     "node.js": "0.0.1-security",
     "opusscript": "0.0.7",
