--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ms": "^2.1.3",
     "node.js": "0.0.1-security",
     "opusscript": "0.0.7",
+    "snekfetch": "^4.0.4",
     "weather-js": "^2.0.0",
     "yt-search": "^2.7.1",
     "ytdl-core": "^4.5.0",
