--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mime": "^2.5.0",
     "moment": "^2.29.1",
     "ms": "^2.1.3",
+    "node-superfetch": "^0.1.11",
     "node.js": "0.0.1-security",
     "opusscript": "0.0.7",
     "snekfetch": "^4.0.4",
