--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "request-promise-native": "^1.0.9",
     "snekfetch": "^4.0.4",
     "weather-js": "^2.0.0",
+    "ytdl-core": "^4.8.3",
     "ytsearch": "^1.0.4"
   }
 }
