--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "common-tags": "^1.8.0",
     "discord-player": "^3.4.0",
+    "discord-tts": "^1.2.1",
     "discord.js": "^12.5.3",
     "discord.js-commando": "^0.12.3",
     "ffmpeg-static": "^4.4.0",
